# UFO_Todo

./: CMakeLists.txt  README.md
cmake_scripts/: copy_resources.cmake
internal_libraries/: CMakeLists.txt
internal_libraries/lib_app_theme/: CMakeLists.txt
internal_libraries/lib_app_theme/include/: app_theme.hpp
internal_libraries/lib_app_theme/src/: app_theme.cpp
internal_libraries/lib_database/: CMakeLists.txt
internal_libraries/lib_database/include/: database.hpp
internal_libraries/lib_database/src/: database.cpp
internal_libraries/lib_logger/: CMakeLists.txt
internal_libraries/lib_logger/include/: logger.hpp
internal_libraries/lib_logger/src/: logger.cpp
internal_libraries/lib_stop_timer/: CMakeLists.txt
internal_libraries/lib_stop_timer/include/: stop_timer.hpp
internal_libraries/lib_stop_timer/src/: stop_timer.cpp
main/include/: main.hpp
main/src/: main.cpp
resources/json/: placeholder.json
resources/json/themes/theme_ufo/: ufo_dark.json  ufo_light.json
resources/qml/: main.qml
resources/qml/components_custom/: UFO_StopTimer.qml
resources/qml/components_ufo/: UFO_Button.qml  UFO_ComboBox.qml  UFO_GroupBox.qml  UFO_ListDelegate.qml  UFO_Menu.qml  UFO_MenuBar.qml  UFO_MenuBarItem.qml  UFO_MenuItem.qml  UFO_MenuItemArrow.qml  UFO_MenuSeparator.qml  UFO_Page.qml  UFO_SideBar.qml  UFO_SideBarButton.qml  UFO_SideBarSeparator.qml  UFO_SplitView.qml  UFO_StatusBar.qml  UFO_TextField.qml
resources/qml/pages/: UFO_About.qml  UFO_Settings.qml  UFO_TaskList.qml  UFO_Tasks.qml  UFO_Timer.qml
source/: CMakeLists.txt  IMPORTANT.txt
source/cmake_scripts/other/: copy_resources.cmake
source/internal_libraries/: CMakeLists.txt
source/internal_libraries/lib_app_theme/include/: app_theme.hpp
source/internal_libraries/lib_app_theme/src/: app_theme.cpp
source/internal_libraries/lib_database/include/: database.hpp
source/internal_libraries/lib_database/src/: database.cpp
source/internal_libraries/lib_network_manager/: CMakeLists.txt
source/internal_libraries/lib_network_manager/include/: network_mananger.hpp
source/internal_libraries/lib_network_manager/src/: network_mananger.cpp
source/internal_libraries/lib_stop_timer/include/: stop_timer.hpp
source/internal_libraries/lib_stop_timer/src/: stop_timer.cpp
source/internal_libraries/main/include/: main.hpp
source/internal_libraries/main/src/: main.cpp
source/resources/json/theme_ufo/: dark.json  light.json
source/resources/json/themes/theme_ufo/: ufo_dark.json  ufo_light.json
source/resources/qml/: main.qml
source/resources/qml/pages/: UFO_About.qml  UFO_Settings.qml  UFO_TaskList.qml  UFO_Timer.qml
source/resources/qml/ufo/: UFO_Button.qml  UFO_ComboBox.qml  UFO_GroupBox.qml  UFO_ListDelegate.qml  UFO_Menu.qml  UFO_MenuBarItem.qml  UFO_MenuItem.qml  UFO_MenuItemIndicator.qml  UFO_Page.qml  UFO_ProgressBar.qml  UFO_SideBar.qml  UFO_SideBarButton.qml  UFO_StatusBar.qml  UFO_StopTimer.qml  UFO_TextField.qml
source/resources/windows/: icons.rc
