# [[ Add Internal Libraries ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_app_theme")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_database")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_stop_timer")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_network_manager")

# Add more internal libraries as needed...

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Internal Libraries ]]
